tests/integration/fixtures/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-kumadre
---
apiVersion: v1
kind: Secret
metadata:
  name: kuma-credentials
  namespace: test-kumadre
type: Opaque
stringData:
  password: admin
